# firewheel

./: Cargo.toml  DESIGN_DOC.md  LICENSE  README.md
crates/firewheel/: Cargo.toml
crates/firewheel-core/: Cargo.toml  README.md
crates/firewheel-core/src/: backend.rs  block_frames.rs  lib.rs  node.rs  sample_resource.rs  server.rs  silence_mask.rs  util.rs
crates/firewheel-core/src/param/: mod.rs  range.rs  smoother.rs
crates/firewheel-core/src/server/: compiler.rs  error.rs  executor.rs
crates/firewheel-core/src/server/compiler/: schedule.rs
crates/firewheel-cpal/: Cargo.toml  README.md
crates/firewheel-cpal/src/: lib.rs
crates/firewheel-graph/: Cargo.toml  README.md
crates/firewheel-graph/src/: backend.rs  context.rs  graph.rs  lib.rs  processor.rs
crates/firewheel-graph/src/basic_nodes/: beep_test.rs  dummy.rs  hard_clip.rs  mod.rs  mono_to_stereo.rs  sampler.rs  stereo_to_mono.rs  sum.rs  volume.rs
crates/firewheel-graph/src/factory_nodes/: beep_test.rs  dummy.rs  mod.rs  mono_to_stereo.rs  sum.rs
crates/firewheel-graph/src/graph/: compiler.rs  error.rs
crates/firewheel-graph/src/graph/compiler/: schedule.rs
crates/firewheel-sampler/: Cargo.toml
crates/firewheel-sampler/src/: lib.rs
crates/firewheel/src/: context.rs  graph.rs  lib.rs  node.rs  processor.rs  util.rs
crates/firewheel/src/factory_nodes/: beep_test.rs  mod.rs
crates/firewheel/src/graph/: compiler.rs  error.rs
crates/firewheel/src/graph/compiler/: schedule.rs
examples/beep_test/: Cargo.toml
examples/beep_test/src/: main.rs
examples/visual_graph_demo/: Cargo.toml
examples/visual_graph_demo/src/: main.rs  system.rs  ui.rs
examples/visual_node_graph/: Cargo.toml  index.html
examples/visual_node_graph/src/: main.rs  system.rs  ui.rs
src/: lib.rs
