[package]
name = "firewheel"
version = "0.1.0"
description = "Flexible, high-performance, and libre audio engine for games (WIP)"
homepage = "https://github.com/BillyDM/firewheel"
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Billy Messenger <60663878+BillyDM@users.noreply.github.com>"]
keywords = ["game", "audio"]
categories = ["game-development", "multimedia::audio"]

[workspace]
members = [
    "crates/firewheel-core",
    "crates/firewheel-graph",
    "crates/firewheel-cpal",
    "crates/firewheel-sampler",
    "examples/beep_test",
    "examples/visual_node_graph",
]

[features]
default = ["cpal"]
cpal = ["dep:firewheel-cpal"]

[dependencies]
firewheel-core = { path = "crates/firewheel-core", version = "0.1" }
firewheel-graph = { path = "crates/firewheel-graph", version = "0.1" }
firewheel-cpal = { path = "crates/firewheel-cpal", version = "0.1", optional = true }

[workspace.dependencies]
log = "0.4.22"
rtrb = "0.3.1"
thiserror = "1.0.64"
smallvec = "1.13.2"
arrayvec = "0.7.6"
atomic_float = "1.1.0"
bitflags = "2.6.0"
downcast-rs = "1.2.1"

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
