[package]
name = "firewheel-cpal"
version = "0.1.0"
description = "cpal backend for Firewheel"
homepage = "https://github.com/BillyDM/firewheel/blob/main/crates/firewheel-cpal"
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
firewheel-core = { path = "../firewheel-core", version = "0.1" }
firewheel-graph = { path = "../firewheel-graph", version = "0.1" }
log.workspace = true
rtrb.workspace = true
thiserror.workspace = true
cpal = "0.15.3"