[package]
name = "firewheel-graph"
description = "Core audio graph algorithm and executor for Firewheel"
homepage = "https://github.com/BillyDM/firewheel/blob/main/crates/firewheel-graph"
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
firewheel-core = { path = "../firewheel-core" }
log.workspace = true
rtrb.workspace = true
thiserror.workspace = true
smallvec.workspace = true
ahash = "0.8.11"
thunderdome = "0.6.1"
