[package]
name = "firewheel-graph"
version = "0.1.0"
description = "Core audio graph algorithm and executor for Firewheel"
homepage = "https://github.com/BillyDM/firewheel/blob/main/crates/firewheel-graph"
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
firewheel-core = { path = "../firewheel-core", version = "0.1" }
log.workspace = true
rtrb.workspace = true
thiserror.workspace = true
smallvec.workspace = true
arrayvec.workspace = true
ahash = "0.8.11"
thunderdome = "0.6.1"
