[package]
name = "firewheel-sampler"
version = "0.1.0"
description = "Sample playback for Firewheel"
homepage = "https://github.com/BillyDM/firewheel/blob/main/crates/firewheel-sampler"
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
firewheel-core = { path = "../firewheel-core", version = "0.1" }
rtrb.workspace = true
atomic_float.workspace = true